[tool.poetry]
name = "pixels-utils"
version = "0.0.1"
description = "A pythonic data science wrapper to [Sentera's public satellite imagery API](https://pixels.sentera.com). The main purpose is to provide more direct access to the Pixels API via common data science libraries (like Pandas and GeoPandas)."
authors = []
exclude = ["pixels_utils/tests/data/*"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
click = "*"
seaborn = "^0.12.2"
requests = "^2.28.1"
sat-search = "^0.3.0"
intake-stac = "^0.4.0"
matplotlib = "^3.5.2"
ipywidgets = "^7.7.1"
ipyfilechooser = "^0.6.0"
retry = "^0.9.2"
validators = "^0.20.0"
joblib = "^1.1.0"
geopy = "^2.2.0"
geo_utils = { git = "ssh://git@github.com/SenteraLLC/py-geo-utils.git", branch = "DEM-136-pixels-initial-release", extras = ["geopandas", "rasterio"] }
utils = { git = "ssh://git@github.com/SenteraLLC/py-utils.git", branch = "master"}
xmltodict = "^0.13.0"

[tool.poetry.dev-dependencies]
pytest = "*"
pre-commit = "*"
sure = "^2.0"
flake8 = "^4.0"
black = {version = "^22.6", allow-prereleases = true}
ipywidgets = "^7.7"
ipykernel = "^6.15"
pyppeteer = "^1.0.2"
jupyterlab = "^3.4.3"

[tool.poetry.scripts]
pixels_utils = "pixels_utils.cli:cli"

[tool.black]
line_length = 120

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
known_third_party = ["joblib", "requests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
