[tool.poetry]
name = "pixels-utils"
version = "0.2.0"
description = "A python wrapper to [Sentera's public Titiler imagery API](https://pixels.sentera.com). The main purpose is to provide more direct access to the Pixels API via common data science libraries (like Rasterio and GeoPandas)."
authors = []
exclude = ["pixels_utils/tests/data/*"]

[tool.poetry.dependencies]
python = "~3.10.4"
click = "*"
geopy = "^2.2.0"
intake-stac = "^0.4.0"
joblib = "^1.1.0"
pystac-client = "^0.6.1"
requests = "^2.28.1"
retry = "^0.9.2"
seaborn = "^0.12.2"
validators = "^0.20.0"
xmltodict = "^0.13.0"
marshmallow = "^3.19.0"
marshmallow-dataclass = "^8.5.14"
typeguard = "^4.0.0"
spyndex = "^0.5.0"
geo_utils = {git = "ssh://git@github.com/SenteraLLC/py-geo-utils.git", branch="main"}
utils = {git = "ssh://git@github.com/SenteraLLC/py-utils.git", branch="master"}

[tool.poetry.group.test.dependencies]
pytest = "*"

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
sure = "^2.0"
flake8 = "^4.0"
black = {version = "^22.6", allow-prereleases = true}
ipywidgets = "^7.7"
ipyfilechooser = "^0.6.0"
ipykernel = "^6.21.2"
jupyterlab = "^3.6.1"
pyppeteer = "^1.0.2"
tabulate = "^0.9.0"

[tool.poetry.scripts]
pixels_utils = "pixels_utils.cli:cli"

[tool.black]
line_length = 120

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
known_third_party = ["joblib", "requests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
